Update Doku zerlegt 2

--- a/src/site/markdown/auto-update-0.6.md.vm
+++ b/src/site/markdown/auto-update-0.6.md.vm
@@ -1,4 +1,4 @@
-Skriptbasiertes Update für Debian
+﻿Skriptbasiertes Update für Debian
 ======================================
 
 Für laufende DWH auf Debian Servern stellen wir eine Update-Skript bereit, zu finden unter 
